# CMake-Multi-Library-Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_windows.bat  gitignore.txt
cmake/: ExternalLibraries.cmake  direct_boost.cmake
src/: CMakeLists.txt  main.cpp
